fix header z-index

--- a/view/css/style.css
+++ b/view/css/style.css
@@ -32,7 +32,7 @@ left:0;
 opacity:0.9;
 right:0;
 top:0;
-z-index:997;
+z-index:999;
 transition:left .2s ease-in;
 box-shadow:0 1px 4px #333;
 webkit-transition:left .2s ease-in
